--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,7 +1,273 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <style>
+        body {
+            color: #5c5c5c;
+        }
+
+        .centered {
+            text-align: center;
+        }
+
+        .sla-plan-column {
+            text-align: center;
+            width: 10rem;;
+        }
+
+        .check-icon::before {
+            content: "\f00c";
+            font-family: FontAwesome, sans-serif;
+            font-size: larger;
+            color: green;
+        }
+    </style>
+</head>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1 class="centered">My Service Level Agreement (SLA) plans</h1>
+<h4 class="centered">Make a choice - give me a call</h4>
+
+<table class="table table-condensed table-striped table-hover" style="margin-top: 4rem;">
+    <tbody>
+    <tr>
+        <th><h4>Development process</h4></th>
+        <th class="sla-plan-column"><h4 style="white-space: nowrap;"><em><strong>Buy me a beer</strong></em></h4></th>
+        <th class="sla-plan-column"><h4><em><strong>$</strong></em></h4></th>
+        <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
+    </tr>
+    <tr>
+        <td><em>You</em> are deciding
+            <em>WHEN</em> the requirement is to be delivered, and I will mostly say "no problem!" and then deliver on time
+        </td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>We will together discus and decide <em>IF</em> and <em>WHEN</em> the requirement is to be delivered</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td><em>I</em> am deciding <em>IF</em> and <em>WHEN</em> the requirement is to be delivered</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Progress reports (on your format of choice)</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Available issue tracking and project metrics</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Available source code</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Open-source license</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Proprietary license</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    </tbody>
+</table>
+
+
+<table class="table table-condensed table-striped table-hover" style="margin-top: 5rem;">
+    <tbody>
+    <tr>
+        <th><h4>User experience (UX)</h4></th>
+        <th class="sla-plan-column"><h4 style="white-space: nowrap;"><em><strong>Buy me a beer</strong></em></h4></th>
+        <th class="sla-plan-column"><h4><em><strong>$</strong></em></h4></th>
+        <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
+    </tr>
+    <tr>
+        <td>Custom domain name and URLs</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Basic support for most browsers</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Full browser support: Chrome</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Full browser support: Firefox, and Internet Explorer (version 10 and above)</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Full browser support: Opera, Safari, Android Browser, Internet Explorer (version 9)</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Full browser support: Internet Explorer (version 8 and below)</td>
+        <td colspan="3">
+            <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
+        </td>
+    </tr>
+    <tr>
+        <td>Support for most screen sizes (PC, laptop, tablet, mobile)</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Support for <em>all</em> screen sizes</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Support for touch devices</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Mean response time: < 2 sec</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Mean response time: < 1 sec</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Mean response time: < 0.5 sec</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>"Worst case" response time: < 10 sec</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>"Worst case" response time: < 5 sec</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>"Worst case" response time: < 2 sec</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>"Worst case" response time: < 1 sec</td>
+        <td colspan="3">
+            <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+
+<table class="table table-condensed table-striped table-hover" style="margin-top: 5rem;">
+    <tbody>
+    <tr>
+        <th><h4>Operations and support</h4></th>
+        <th class="sla-plan-column"><h4 style="white-space: nowrap;"><em><strong>Buy me a beer</strong></em></h4></th>
+        <th class="sla-plan-column"><h4><em><strong>$</strong></em></h4></th>
+        <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
+    </tr>
+    <tr>
+        <td>Availability: 97% (better than "one nine", downtime per year: 10.96 days)</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Availability: 99% ("two nines", downtime per year: 3.65 days)</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>High availability: "three nines" and beyond</td>
+        <td colspan="3">
+            <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
+        </td>
+    </tr>
+    <tr>
+        <td>Storage: < 100 MB</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Storage: > 100 MB</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Storage: > 10 GB</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Backup services</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Bug reporting/Issue tracking</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Online support, UTC day-time</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Online support, 24/7</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
