Non-disclosure option added

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <style>
         body {
             color: #5c5c5c;
         }
-
         .centered {
             text-align: center;
         }
-
         .sla-plan-column {
             text-align: center;
             width: 10rem;;
         }
-
         .check-icon::before {
             content: "\f00c";
             font-family: FontAwesome, sans-serif;
@@ -26,7 +23,7 @@
 </head>
 <html>
 <body>
-<h1 class="centered">My Service Level Agreement (SLA) plans</h1>
+<h2 class="centered">My Service Level Agreement (SLA) plans</h2>
 <h4 class="centered">Make a choice - give me a call</h4>
 
 <table class="table table-condensed table-striped table-hover" style="margin-top: 4rem;">
@@ -38,28 +35,26 @@
         <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
     </tr>
     <tr>
-        <td><em>You</em> are deciding
-            <em>WHEN</em> the requirement is to be delivered, and I will mostly say "no problem!" and then deliver on time
-        </td>
-        <td class="sla-plan-column">-</td>
-        <td class="sla-plan-column">-</td>
+        <td><em>You</em> will decide <em>WHEN</em> the requirement is to be delivered, and I will mostly say "no problem!" and then do it on time</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td>We will together discus and decide <em>IF</em> and <em>WHEN</em> the requirement is to be delivered</td>
-        <td class="sla-plan-column">-</td>
+        <td>We will together discuss and decide <em>IF</em> and <em>WHEN</em> the requirement is to be delivered</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td><em>I</em> am deciding <em>IF</em> and <em>WHEN</em> the requirement is to be delivered</td>
+        <td><em>I</em> will decide <em>IF</em> and <em>WHEN</em> the requirement is to be delivered</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td>Progress reports (on your format of choice)</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
@@ -83,8 +78,14 @@
     </tr>
     <tr>
         <td>Proprietary license</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td>Non-disclosure agreement</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     </tbody>
@@ -101,7 +102,7 @@
     </tr>
     <tr>
         <td>Custom domain name and URLs</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
@@ -119,14 +120,14 @@
     </tr>
     <tr>
         <td>Full browser support: Firefox, and Internet Explorer (version 10 and above)</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td>Full browser support: Opera, Safari, Android Browser, Internet Explorer (version 9)</td>
-        <td class="sla-plan-column">-</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
@@ -143,7 +144,7 @@
     </tr>
     <tr>
         <td>Support for <em>all</em> screen sizes</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
@@ -161,14 +162,14 @@
     </tr>
     <tr>
         <td>Mean response time: < 1 sec</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td>Mean response time: < 0.5 sec</td>
-        <td class="sla-plan-column">-</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
@@ -179,14 +180,14 @@
     </tr>
     <tr>
         <td>"Worst case" response time: < 5 sec</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td>"Worst case" response time: < 2 sec</td>
-        <td class="sla-plan-column">-</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
@@ -208,14 +209,14 @@
         <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
     </tr>
     <tr>
-        <td>Availability: 97% (better than "one nine", downtime per year: 10.96 days)</td>
+        <td>Availability: 97% (better than "one nine", max downtime per year: 10.96 days)</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td>Availability: 99% ("two nines", downtime per year: 3.65 days)</td>
-        <td class="sla-plan-column">-</td>
+        <td>Availability: 99% ("two nines", max downtime per year: 3.65 days)</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
@@ -233,19 +234,19 @@
     </tr>
     <tr>
         <td>Storage: > 100 MB</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td>Storage: > 10 GB</td>
-        <td class="sla-plan-column">-</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td>Backup services</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
@@ -257,14 +258,14 @@
     </tr>
     <tr>
         <td>Online support, UTC day-time</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td>Online support, 24/7</td>
-        <td class="sla-plan-column">-</td>
-        <td class="sla-plan-column">-</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     </tbody>
